adjusted dependency between NumberFormat and NumberStyle