@@ -13,6 +13,7 @@ import org.civilian.util.Check;
 import org.civilian.util.StringUtil;
 
 
+
 /**
  * NumberFormat provides locale dependent formatting of numbers.
  */
@@ -100,7 +101,7 @@ public class NumberFormat implements Serializable
 	 * Returns the grouping separator as String.
 	 * @return the separator or null if not defined
 	 */
-	public String getGroupingSeparatorString()
+	public String getGroupingSepString()
 	{
 		return groupingSeparatorString_;
 	}
@@ -117,7 +118,7 @@ public class NumberFormat implements Serializable
 
 	
 	//----------------------------
-	// format
+	// format natural
 	//----------------------------
 
 	
@@ -126,8 +127,54 @@ public class NumberFormat implements Serializable
 	 */
 	public String formatNatural(long value)
 	{
-		return NumberStyle.DEFAULT.formatNatural(this, value);
+		return formatNatural(value, null).toString();
 	}
+
+	
+	/**
+	 * Formats a long value.
+	 */
+	public String formatNatural(long value, NumberStyle style)
+	{
+		return formatNatural(value, style, null).toString();
+	}
+
+	
+	/**
+	 * Formats a long value.
+	 */
+	public StringBuilder formatNatural(long value, NumberStyle style, StringBuilder builder)
+	{
+		return formatNatural(String.valueOf(value), style, builder);
+	}
+	
+	
+	/**
+	 * Formats a natural number.
+	 * @param value the value.
+	 * @param style a NumberStyle to determine grouping. If null the default
+	 * 		NumberStyle is used.
+	 * @param builder a StringBuilder to which the formatted number is appended. 
+	 * 		If the builder is null, then a new StringBuilder will be created. 
+	 * @return the StringBuilder containing the number
+	 */
+	public StringBuilder formatNatural(Number value, NumberStyle style, StringBuilder builder)
+	{
+		return formatNatural(value != null ? value.toString() : "", style, builder);
+	}
+
+	
+	private StringBuilder formatNatural(String raw, NumberStyle style, StringBuilder builder)
+	{
+		builder = setup(builder);
+		format(raw, norm(style).useGrouping(), 0, 0, builder);
+		return builder;
+	}
+
+	
+	//----------------------------
+	// format decimal
+	//----------------------------
 
 	
 	/**
@@ -135,9 +182,149 @@ public class NumberFormat implements Serializable
 	 */
 	public String formatDecimal(double value)
 	{
-		return NumberStyle.DEFAULT.formatDecimal(this, value);
+		return formatDecimal(value, null);
 	}
 
+	
+	/**
+	 * Formats a double value.
+	 */
+	public String formatDecimal(double value, NumberStyle style)
+	{
+		return formatDecimal(value, style, null).toString();
+	}
+
+	
+	/**
+	 * Formats a long value.
+	 */
+	public StringBuilder formatDecimal(double value, NumberStyle style, StringBuilder builder)
+	{
+		return formatDecimal(String.valueOf(value), style, builder);
+	}
+	
+	
+	/**
+	 * Formats a number.
+	 */
+	public StringBuilder formatDecimal(Number value, NumberStyle style, StringBuilder builder)
+	{
+		return formatDecimal(value != null ? value.toString() : "", style, builder);
+	}
+
+	
+	/**
+	 * Formats a decimal number.
+	 * @param value the value.
+	 * @param style a NumberStyle to determine grouping and number of decimals. If null the default
+	 * 		NumberStyle is used.
+	 * @param builder a StringBuilder to which the formatted number is appended. 
+	 * 		If the builder is null, then a new StringBuilder will be created. 
+	 * @return the StringBuilder containing the number
+	 */
+	private StringBuilder formatDecimal(String raw, NumberStyle style, StringBuilder builder)
+	{
+		builder = setup(builder);
+		
+		if (raw.indexOf('E') >= 0)
+			builder.append(raw); // scientific notation: give up
+		else
+		{
+			style = norm(style);
+			format(raw, style.useGrouping(), style.minDecimals(), style.maxDecimals(), builder);
+		}
+		
+		return builder;
+	}
+
+	
+	//----------------------------
+	// format helpers
+	//----------------------------
+
+	
+	private void format(String raw, boolean grouping, int minDecimals, int maxDecimals, StringBuilder builder)
+	{
+		int length 	= raw.length();
+		int dot 	= raw.indexOf('.');
+		
+		formatNaturalPart(raw, grouping, dot < 0 ? length : dot, builder);
+		if (maxDecimals > 0)
+			formatFractionPart(raw, dot, minDecimals, maxDecimals, builder);
+	}
+	
+	
+	private void formatNaturalPart(String raw, boolean grouping, int end, StringBuilder builder)
+	{
+		int length = end;
+		int start  = 0;
+		if (raw.startsWith("-"))
+		{
+			start = 1;
+			length--;
+			builder.append('-');
+		}
+		
+		if ((length > 3) && grouping)
+		{
+			String sep = getGroupingSepString();
+			if (sep != null)
+			{
+				int next = length % 3;
+				if (next == 0)
+					next = 3;
+				next += start;
+				builder.append(raw, start, next);
+				
+				while(next < end)
+				{
+					builder.append(sep);
+					builder.append(raw, next, next + 3);
+					next += 3;
+				}
+				return;
+			}
+		}
+		
+		// fallback
+		if (length == 0)
+			builder.append('0');
+		else
+			builder.append(raw, start, end);
+	}
+	
+
+	private void formatFractionPart(String raw, int dot, int minDecimals, int maxDecimals, StringBuilder builder)
+	{
+		builder.append(getDecimalSeparator());
+		
+		int length = raw.length();
+		int added  = 0;
+		
+		if (dot >= 0)
+		{
+			int start    = dot + 1;
+			int decimals = length - start;
+			added 	 	 = Math.min(maxDecimals, decimals);
+			builder.append(raw, start, start + added);
+		}
+		
+		for (int i=added; i<minDecimals; i++)
+			builder.append('0');
+	}
+	
+	
+	private static NumberStyle norm(NumberStyle style)
+	{
+		return style != null ? style : NumberStyle.DEFAULT;
+	}
+	
+	
+	private StringBuilder setup(StringBuilder builder)
+	{
+		return builder != null ? builder : new StringBuilder();
+	}
+	
 	
 	//----------------------------
 	// parse
@@ -256,7 +443,7 @@ public class NumberFormat implements Serializable
 	
 	public Short parseShort(String s)
 	{
-		return StringUtil.isBlank(s) ? null : new Short((short)parseLongValue(s));
+		return StringUtil.isBlank(s) ? null : Short.valueOf((short)parseLongValue(s));
 	}
 
 	
